# ocaml-baguettesharp-interpreter

./: .gitignore  .ocamlformat  CNAME  LICENCE  README.md  README_en.md  README_fr.md  _config.yml  automatic.sh  baguette-sharp.opam  baguette_sharp.install  baguette_sharp.opam  download.sh  dune-project  index.md  install.sh  makefile  opam.msg  out  out.bag  out.test  t.bag  test.bag
docs/: CNAME  _config.yml  advanced.md  basic.md  game.bag  if.baguette  index.md  random.md  repl.md  test.baguette  turing.md
docs/_layouts/: default.html
docs/doc/: index.html
docs/doc/baguette-sharp/: index.html
docs/doc/baguette_sharp/: index.html
docs/doc/baguette_sharp/Baguette_sharp/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Array_manipulation/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Conditions/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Functions/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Interpreter/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Lexer/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Math/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Parser/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Parser/class-arg/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Parser/class-bag_exception/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Parser/class-outofbound/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Parser/class-syntax_error/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Parser/class-type_error/: index.html
docs/doc/baguette_sharp/Baguette_sharp/String_manipulation/: index.html
docs/doc/baguette_sharp/Baguette_sharp/Token/: index.html
examples/: advanced.baguette  conditions.baguette  emoji_condition.baguette  emoji_hello_world.baguette  emoji_math.baguette  emoji_read.baguette  emoji_turing.baguette  emojitoken.baguette  function_test.baguette  helloworld.baguette  if.baguette  label-goto.baguette  loaddependancy.bag  math.baguette  multivariable_test.baguette  quadratic.baguette  read.baguette  save.baguette  turing.baguette  turing_programs.txt  while.baguette
first_test/: baguette_sharp.opam  dune-project  monkey.install  monkey.opam
first_test/examples/: baguette_sharp  baguette_sharp_interpreter.bc  if.baguette  negativenumbers.baguette
first_test/exemples/: advanced.baguette  conditions.baguette  if.baguette  math.baguette  multivariable_test.baguette  negativenumbers.baguette  print.baguette  quadratic.baguette  read.baguette  while.baguette
first_test/src/: baguette_sharp.ml  conditions.ml  dictionnaire.ml  dune  functions.ml  interpreter.ml  lexer.ml  math.ml  monkey.ml  parser.ml  token.ml
first_test/src/base/: dune
first_test/src/compiler/: standardlibrary.cpp  standardlibrary.hpp
first_test/src/functions/: functions.ml
first_test/src/main/: baguette_sharp_interpreter.ml  dune  test
first_test/test/: dune  test.ml
src/: baguette_sharp.opam  dune  dune-project  filemanager.ml  interpreter.ml  levenshtein.ml  utils.ml
src/base/: baguette_base.opam  dune  dune-project  lexer.ml  parser.ml  token.ml
src/bench_lexer/: bench_lexer.ml  dune
src/codegen/: codegen.ml  dune  std.ll
src/compiler/: compiler.ml  dune  test.cpp
src/compilers/: baguette_sharp_interpreter.ml  dune
src/functions/: array_manipulation.ml  baguette_functions.opam  conditions.ml  dune  dune-project  functions.ml  math.ml  string_manipulation.ml
src/main/: baguette_sharp_interpreter.ml  dune  test
src/transpiler/: dune  naive.ml  test.ml  transpiler.ml
src/website/: dune  website_interpreter.ml
test/: dune  test.ml
