(lang dune 2.0)

(name baguette_sharp)
(version 2.0.2)
(generate_opam_files true)

(source
 (github coco33920/ocaml-baguettesharp-interpreter))

(authors "Charlotte Thomas")

(maintainers "Charlotte Thomas")

(license MIT)

(documentation https://github.com/coco33920/ocaml-baguettesharp-interpreter/wiki)

(package
 (name baguette_sharp)
 (homepage https://baguettesharp.fr)
 (synopsis "The Baguette# Interpreter")
 (description "The Interpreter for Baguette#, uses baguette_base and baguette_functions to do much of the work itself")
 (depends ocaml dune fmt str baguette_base baguette_functions)
 )
