(lang dune 3.0)

(name baguette_sharp)
(version 2.0.2)
(generate_opam_files false)

(source
 (github coco33920/ocaml-baguettesharp-interpreter))

(authors "Charlotte Thomas")

(maintainers "Charlotte Thomas")

(license MIT)

(documentation https://github.com/coco33920/ocaml-baguettesharp-interpreter/wiki)

(package
 (name baguette_sharp)
 (homepage https://baguettesharp.fr)
 (synopsis "The Baguette# Interpreter")
 (description "The Interpreter for Baguette#. Defines the lexer,parser the functions themselves and the Interpreter")
 (depends ocaml>=4.02 dune>=3.0 fmt>=0.7.0))
